--- a/UI (ongoing)/card.html
+++ b/UI (ongoing)/card.html
@@ -42,32 +42,32 @@
 
 	<div class="container">
 		<br>
+		<div class="row">
 			<h1 class="h-bold">iPhone Xs Max </h1> <hr>
-			<div class="row">
-				<div class="col-sm-6"><h2 class="font-weight-bold">Averages</h2></div>
+		</div>
+		<div class="row">
+				<h2 class="font-weight-bold">Averages</h2>
+		</div> <br>
+		<div class="row">
+			<div class="col-sm-6">
+				<h2><span class="badge badge-success">PawnHero</span> </h2>
 			</div>
-			<br>
-			<div class="row">
-				<div class="col-sm-6">
-					<h2><span class="badge badge-success">PawnHero</span> </h2>
-				</div>
-				<div class="col-sm-6">
+			<div class="col-sm-6">
 					<h2><span class="badge badge-dark">MarketPlace</span> </h2>
-				</div>
 			</div>
-			<br>
+		</div> <br>
 			
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="row">
-						<div class="col-sm-5">
-							<h4>Minimum</h4> 
-						</div>
-						<div class="col-sm-5">
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="row">
+					<div class="col-sm-5">
+						<h4>Minimum</h4> 
+					</div>
+					<div class="col-sm-5">
 							<h4><span class="badge badge-danger" style="text-align: left;">&#8369; 40,000.00</span></h4>
-						</div>
 					</div>
 				</div>
+			</div>
 				<div class="col-sm-6">
 					<div class="row">
 						<div class="col-sm-5">
@@ -188,6 +188,7 @@
 			    <a href="#" class="btn btn-success" style="width: 100%">View More Info</a>
 			  </div>
 			</div>
+			
 			<div class="card" style="width: 16rem;">
 			  <img class="card-img-top" src="https://brain-images-ssl.cdn.dixons.com/2/5/10185952/u_10185952.jpg" alt="Image on Card Sample" width="10rem" height="220vh" style=" background-color: #444444; margin-top: 2vh;">
 			  <div class="card-body">
